--- a/Homework2/index.html
+++ b/Homework2/index.html
@@ -18,12 +18,13 @@
   <main>
     <section id="section1">
       <figure>
-        <img src="./images/image-daniel.jpg" alt="profile picture">
+        <img class="img-profile" src="./images/image-daniel.jpg" alt="profile picture">
       </figure>
 
       <hgroup class="colorTitle">
         <h2>Daniel Clifford</h2>
         <h4>Verified Graduate</h4>
+        <img class="img-mark" src="./images/bg-pattern-quotation.svg" alt="quotation mark">
       </hgroup>
 
       <div class="content">
@@ -40,7 +41,7 @@
 
     <section id="section2">
       <figure>
-        <img src="./images/image-jonathan.jpg" alt="profile picture">
+        <img class="img-profile" src="./images/image-jonathan.jpg" alt="profile picture">
       </figure>
 
       <hgroup class="colorTitle">
@@ -58,7 +59,7 @@
 
     <section id="section5">
       <figure>
-        <img src="./images/image-kira.jpg" alt="profile picture">
+        <img class="img-profile" src="./images/image-kira.jpg" alt="profile picture">
       </figure>
     
       <hgroup class="colorTitleSecond">
@@ -83,7 +84,7 @@
 
     <section id="section3"> 
       <figure>
-        <img src="./images/image-jeanette.jpg" alt="profile picture">
+        <img class="img-profile" src="./images/image-jeanette.jpg" alt="profile picture">
       </figure>
 
       <hgroup class="colorTitleSecond">
@@ -101,7 +102,7 @@
 
     <section id="section4">
       <figure>
-        <img src="./images/image-patrick.jpg" alt="profile picture">
+        <img class="img-profile" src="./images/image-patrick.jpg" alt="profile picture">
       </figure>
 
       <hgroup class="colorTitle">
