--- a/Homework2/index.html
+++ b/Homework2/index.html
@@ -10,13 +10,16 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@800&display=swap" rel="stylesheet">
-  
+  <link rel="stylesheet" media="screen and (orientation: portrait)" href="portrait.css">
+
   <title>Frontend Mentor | Testimonials Grid Section</title>
 </head>
 
 <body>
   <main>
     <section id="section1">
+      <img class="img-mark" src="./images/bg-pattern-quotation.svg" alt="quotation mark">
+
       <figure>
         <img class="img-profile" src="./images/image-daniel.jpg" alt="profile picture">
       </figure>
@@ -24,7 +27,7 @@
       <hgroup class="colorTitle">
         <h2>Daniel Clifford</h2>
         <h4>Verified Graduate</h4>
-        <img class="img-mark" src="./images/bg-pattern-quotation.svg" alt="quotation mark">
+      
       </hgroup>
 
       <div class="content">
