--- a/Homework3/index.html
+++ b/Homework3/index.html
@@ -14,50 +14,70 @@
 
 <body>
   <main>
-    <section>
-      <div>
+    <section id="sectionNav">
+      <div class="navLeft">
         <figure>
-          <img src="" alt="">
+          <img src="./images/icon-messages.svg" alt="icon messages">
         </figure>
-        Huddle
+        <p class="navTxt">Huddle</p>
       </div>
 
-      <div>
-        Try it free
+      <div class="buttonNav">
+        <a href="#">Try it free</a> 
       </div>
     </section>
 
-    <section>
-      <header>
-        Build The Community Your Fans Will Love
+    <section id="sectionTitle">
+      <header class="title">
+        <h1>Build The Community Your Fans Will Love</h1>
 
-        Huddle re-imagines the way we build communities. You have a voice, but so does 
-        your audience. Create connections with your users as you engage in genuine discussion. 
+        <p class="title2">Huddle re-imagines the way we build communities. You have a voice, but so does 
+        your audience. Create connections with your users as you engage in genuine discussion.</p>
       </header>
 
-      Get Started For Free
+      <a href="#">Get Started For Free</a>
     </section>
 
-    1.4k+
-    Communities Formed
+    <section id="sectionScreen">
+      <img class="imgScreen" src="./images/screen-mockups.svg" alt="screen mockups">
 
-    2.7m+
-    Messages Sent
+      <article>
+        <div class="article1">
+          <img src="./images/icon-communities.svg" alt="icon communities">
+            <h1>1.4k+</h1>
+            <p>Communities Formed</p>
+        </div>
+        <div class="article2">
+          <img src="./images/icon-messages.svg" alt="icon messages">
+            <h1>2.7m+</h1>
+            <p>Messages Sent</p>
+        </div>
+      </article>
+    </section>
 
-    Grow Together
-    Generate meaningful discussions with your audience and build a strong, loyal community. 
-    Think of the insightful conversations you miss out on with a feedback form. 
+    <section id="section1">
+      Grow Together
+      Generate meaningful discussions with your audience and build a strong, loyal community. 
+      Think of the insightful conversations you miss out on with a feedback form. 
+      <img src="./images/illustration-grow-together.svg" alt="illustration grow together">
+    </section>
 
-    Flowing Conversations
-    You wouldn't paginate a conversation in real life, so why do it online? Our threads have 
-    just-in-time loading for a more natural flow.
+    <section id="section2">
+      <img src="./images/illustration-flowing-conversation.svg" alt="illustration flowing conversation">
+      Flowing Conversations
+      You wouldn't paginate a conversation in real life, so why do it online? Our threads have 
+      just-in-time loading for a more natural flow.
+    </section>
 
-    Your Users
-    It takes no time at all to integrate Huddle with your app's authentication solution. This means, 
-    once signed in to your app, your users can start chatting immediately.
+    <section id="section3">
+      Your Users
+      It takes no time at all to integrate Huddle with your app's authentication solution. This means, 
+      once signed in to your app, your users can start chatting immediately.
+      <img src="./images/illustration-your-users.svg" alt="illustration your users">
 
-    Ready To Build Your Community?
-    Get Started For Free
+      Ready To Build Your Community?
+      Get Started For Free
+    </section>
 
     <aside>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia 
